--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', activity: @activity %>
 
-<%= link_to 'Show', @activity %> |
-<%= link_to 'Back', activities_path %>
+<%= link_to 'Visualizar', @activity %> |
+<%= link_to 'Voltar', activities_path %>
